--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ before_install:
   # Useful for debugging any issues with conda
   - conda info -a
   # build a python enviornment matching travis python version
-  - conda create -q -n test_environment python=$TRAVIS_PYTHON_VERSION pip setuptools wheel numpy scipy twine pytest pytest-cov 
+  - conda create -q -n test_environment python=$TRAVIS_PYTHON_VERSION pip setuptools wheel numpy scipy pytest pytest-cov 
   - source activate test_environment
   - conda install -q -y conda-build anaconda-client
-  - pip install coveralls
+  - pip install coveralls twine
   # - pip install --upgrade pip setuptools wheel
   # - pip install --only-binary=numpy,scipy numpy scipy
   # - pip install twine
