--- a/.travis.yml
+++ b/.travis.yml
@@ -43,10 +43,11 @@ install:
   # - python setup.py install
   # - conda build ./conda-build --no-anaconda-upload --python=${TRAVIS_PYTHON_VERSION} --output
   - CONDA_OUTPUT=$(conda build ./conda-build --no-anaconda-upload --output --python=${TRAVIS_PYTHON_VERSION})
-  - echo ${CONDA_OUTPUT}
-  - conda install $HOME/miniconda/envs/test_environment/conda-bld/${OS}/${PACKAGE_NAME}*.bz2
+  - echo $CONDA_OUTPUT
+  - echo $(wc -c < "$CONDA_OUTPUT")
+  # - conda install $HOME/miniconda/envs/test_environment/conda-bld/${OS}/${PACKAGE_NAME}*.bz2
 script:
-  - pytest --pyargs kinematics # test installed version
+  # - pytest --pyargs kinematics # test installed version
   - pytest --cov=kinematics # get coverage
 after_success:
   - coveralls
