--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 sudo: false
 env:
   - PACKAGE_NAME=kinematics
-  - OS=linux-64
 matrix:
     include:
         - os: linux
@@ -20,11 +19,11 @@ matrix:
 before_install:
   - sudo apt-get update
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-    wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
     else
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
     fi
-  - bash miniconda.sh -b -p $HOME/miniconda
+  - bash ${HOME}/miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
@@ -45,7 +44,7 @@ install:
   # - conda build ./conda-build --no-anaconda-upload --python=${TRAVIS_PYTHON_VERSION} --output
   - mkdir ${HOME}/conda-build
   - conda build ./conda-build --no-anaconda-upload --output-folder ~/conda-build --python=${TRAVIS_PYTHON_VERSION}
-  - conda install $HOME/conda-build/${OS}/${PACKAGE_NAME}*.bz2
+  - conda install $HOME/conda-build/linux-64/${PACKAGE_NAME}*.bz2
 script:
   - pytest --pyargs kinematics # test installed version
   - pytest --cov=kinematics # get coverage
