--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,11 @@ language: python
 sudo: false
 env:
   - PACKAGE_NAME=kinematics
-matrix:
-  include:
-    - os: linux
-      python: 3.4
-    - os: linux
-      python: 3.5
-    - os: linux
-      python: 3.6
-    - os: linux
-      python: 3.7
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 before_install:
   - sudo apt-get update
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
