--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ deploy:
     on:
       tags: true
       branch: master
+      condition: ${TRAVIS_OS_NAME} == "linux" && ${TRAVIS_PYTHON_VERSION} == "3.7"
     distributions: "sdist bdist_wheel"
     python: "${TRAVIS_PYTHON_VERSION}"
   - provider: script
