--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ sudo: false
 env:
   - PACKAGE_NAME=kinematics
 dist: xenial
+os: 
+  - linux
+python:
+  - 3.4
+  - 3.5
+  - 3.6
 matrix:
   include:
-    - python: 3.4
-    - python: 3.5
-    - python: 3.6
     - python: 3.7
       dist: xenial
       sudo: true
