--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,28 @@ env:
 dist: xenial
 os: 
   - linux
+  - osx
 python:
   - 3.4
   - 3.5
   - 3.6
+  - 3.7
 matrix:
   include:
     - python: 3.7
       dist: xenial
       sudo: true
 before_install:
-  - sudo apt-get update
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-    wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
-    else
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
+    elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O ${HOME}/miniconda.sh;
     fi
+  # - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  #   wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
+  #   else
+  #   wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
+  #   fi
   - bash ${HOME}/miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
