--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: python
-sudo: false
+sudo: true
 env:
   - PACKAGE_NAME=kinematics
-dist: xenial
-os: 
-  - linux
-  - osx
-python:
-  - 3.4
-  - 3.5
-  - 3.6
-  - 3.7
 matrix:
   include:
-    - python: 3.7
+    - os: linux
       dist: xenial
-      sudo: true
+      env: TRAVIS_PYTHON_VERSION=3.4
+    - os: linux
+      dist: xenial
+      env: TRAVIS_PYTHON_VERSION=3.5
+    - os: linux
+      dist: xenial
+      env: TRAVIS_PYTHON_VERSION=3.6
+    - os: linux
+      dist: xenial
+      env: TRAVIS_PYTHON_VERSION=3.7
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
