Update travis with path name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 language: python
 sudo: true
-os: linux
-dist: xenial
-env:
-  global:
-    - PACKAGE_NAME=kinematics
-  matrix:
-    - PYTHON_VERSION=3.4
-    - PYTHON_VERSION=3.5
-    - PYTHON_VERSION=3.6
-    - PYTHON_VERSION=3.7
+matrix:
+  include:
+    - os: linux
+      dist: xenial
+      env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.4 OS_PATH=linux-64
+    - os: linux
+      dist: xenial
+      env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.5 OS_PATH=linux-64
+    - os: linux
+      dist: xenial
+      env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.6 OS_PATH=linux-64
+    - os: linux
+      dist: xenial
+      env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.7 OS_PATH=linux-64
+
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh;
@@ -42,7 +47,7 @@ install:
   # - conda build ./conda-build --no-anaconda-upload --python=${PYTHON_VERSION} --output
   - mkdir ${HOME}/conda-build
   - conda build ./conda-build --no-anaconda-upload --output-folder ~/conda-build --python=${PYTHON_VERSION}
-  - conda install ${HOME}/conda-build/linux-64/${PACKAGE_NAME}-*.bz2 --use-local
+  - conda install ${HOME}/conda-build/${OS_PATH}/${PACKAGE_NAME}-*.bz2 --use-local
 script:
   - pytest --pyargs kinematics # test installed version
   - pytest --cov=kinematics # get coverage
