Try to build on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
     - os: linux
       dist: xenial
       env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.7 OS_PATH=linux-64
+    - os: osx
+      env: PACKAGE_NAME=kinematics PYTHON_VERSION=3.7 OS_PATH=osx-64
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
